# algo_trading_dashboard

./: .gitignore  GUI_PLAN.md  INSTALL.md  Makefile  cleanup.sh  config.yaml  docker-compose.yml  instructions.md  project_Structure.md  prometheus.yml  pyproject.toml  readme.md  remaining_tasks.md  requirements.txt  setup.py  start_dev.sh
frontend/: .env.template
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  MarketDataChart.tsx
frontend/src/types/: plotly.js-dist.d.ts
src/: main.py
src/data/: pipeline.py
src/data/collectors/: base_collector.py  yfinance_collector.py
src/data/processors/: feature_engineering.py
src/data/storage/: base_storage.py  influxdb_storage.py
src/infrastructure/api/: main.py
src/utils/: config.py  data_validation.py
tests/: test_pipeline.py
