[tool.poetry]
name = "algo-trading-dashboard"
version = "0.1.0"
description = "Advanced ML-Driven Algorithmic Trading System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.2.0"
pandas = "<2.0.0"
numpy = "<1.25.0"
influxdb-client = "^1.36.0"
redis = "^4.5.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
websockets = "^11.0.0"
prometheus-client = "^0.17.0"
python-logging-loki = "^0.3.1"
pyyaml = "^6.0.0"
ta = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
